// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsInfoBar code monitoring feature flag disabled 1`] = `
<DocumentFragment>
  <div
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
  >
    <div
      class="row"
    >
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex d-lg-none"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline mr-1"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
          />
        </svg>
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
          />
        </svg>
      </button>
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 navItem"
        >
          <a
            class="anchorLink btn btnOutlineSecondary btnSm text-decoration-none test-save-search-link"
            href=""
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17,18L12,15.82L7,18V5H17M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
              />
            </svg>
            Save search
          </a>
        </li>
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="navItem"
        >
          <button
            aria-label="Hide more matches on all results"
            aria-live="polite"
            class="btn btnOutlineSecondary btnSm text-decoration-none"
            data-placement="bottom"
            data-testid="search-result-expand-btn"
            data-tooltip="Hide more matches on all results"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-0"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M4.08,11.92L12,4L19.92,11.92L18.5,13.33L13,7.83V22H11V7.83L5.5,13.33L4.08,11.92M12,4H22V2H2V4H12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar code monitoring feature flag enabled, can create monitor from query 1`] = `
<DocumentFragment>
  <div
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
  >
    <div
      class="row"
    >
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex d-lg-none"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline mr-1"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
          />
        </svg>
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
          />
        </svg>
      </button>
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 button navItem"
          data-placement="bottom"
        >
          <a
            class="anchorLink btn btnOutlineSecondary btnSm text-decoration-none a11y-ignore create-code-monitor-button"
            href="/code-monitoring/new?trigger-query=foo+type%3Adiff+patterntype%3Aliteral"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="iconInline mr-1"
              fill="currentColor"
              height="20"
              role="img"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M18.01 8.01C18.01 8.29 18.23 8.51 18.51 8.51C18.79 8.51 19.01 8.29 19.01 8.01C19.01 4.15 15.87 1 12 1C11.72 1 11.5 1.22 11.5 1.5C11.5 1.78 11.72 2 12 2C15.31 2 18.01 4.7 18.01 8.01ZM16.1801 7.96002C15.9001 7.96002 15.6801 7.74002 15.6801 7.46002C15.6801 5.81002 14.3301 4.46002 12.6801 4.46002C12.4001 4.46002 12.1801 4.24002 12.1801 3.96002C12.1801 3.68002 12.4001 3.46002 12.6801 3.46002C14.8901 3.46002 16.6801 5.25002 16.6801 7.46002C16.6801 7.74002 16.4601 7.96002 16.1801 7.96002ZM4.83996 6.79999L13.34 15.3C12.39 15.88 11.29 16.18 10.15 16.18C8.49996 16.18 6.93996 15.54 5.76996 14.37C4.59996 13.2 3.94996 11.65 3.94996 9.98999C3.94996 8.84999 4.25996 7.74999 4.83996 6.79999ZM4.70996 4.54999C1.70996 7.54999 1.70996 12.43 4.70996 15.43C6.20996 16.93 8.17996 17.68 10.15 17.68C12.12 17.68 14.09 16.93 15.59 15.43L4.70996 4.54999ZM4 16.14C3.7 15.84 3.43 15.52 3.18 15.18L2.89 15.69L1 18.97H4.79H8.59L8.31 18.49C6.69 18.14 5.2 17.34 4 16.14ZM13.85 8.04999C13.85 9.01999 13.07 9.79999 12.1 9.79999C11.13 9.79999 10.35 9.01999 10.35 8.04999C10.35 7.07999 11.13 6.29999 12.1 6.29999C13.07 6.29999 13.85 7.07999 13.85 8.04999Z"
                fill-rule="evenodd"
              />
            </svg>
            Monitor
          </a>
        </li>
        <li
          class="mr-2 menu navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open create actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-4"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              />
            </svg>
            Create …
          </button>
        </li>
        <li
          class="mr-2 navItem"
        >
          <a
            class="anchorLink btn btnOutlineSecondary btnSm text-decoration-none test-save-search-link"
            href=""
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17,18L12,15.82L7,18V5H17M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
              />
            </svg>
            Save search
          </a>
        </li>
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="navItem"
        >
          <button
            aria-label="Hide more matches on all results"
            aria-live="polite"
            class="btn btnOutlineSecondary btnSm text-decoration-none"
            data-placement="bottom"
            data-testid="search-result-expand-btn"
            data-tooltip="Hide more matches on all results"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-0"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M4.08,11.92L12,4L19.92,11.92L18.5,13.33L13,7.83V22H11V7.83L5.5,13.33L4.08,11.92M12,4H22V2H2V4H12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar code monitoring feature flag enabled, can create monitor from query, user not logged in 1`] = `
<DocumentFragment>
  <div
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
  >
    <div
      class="row"
    >
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex d-lg-none"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline mr-1"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
          />
        </svg>
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
          />
        </svg>
      </button>
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 button navItem"
          data-placement="bottom"
        >
          <button
            class="btn btnOutlineSecondary btnSm a11y-ignore create-code-monitor-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="iconInline mr-1"
              fill="currentColor"
              height="20"
              role="img"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M18.01 8.01C18.01 8.29 18.23 8.51 18.51 8.51C18.79 8.51 19.01 8.29 19.01 8.01C19.01 4.15 15.87 1 12 1C11.72 1 11.5 1.22 11.5 1.5C11.5 1.78 11.72 2 12 2C15.31 2 18.01 4.7 18.01 8.01ZM16.1801 7.96002C15.9001 7.96002 15.6801 7.74002 15.6801 7.46002C15.6801 5.81002 14.3301 4.46002 12.6801 4.46002C12.4001 4.46002 12.1801 4.24002 12.1801 3.96002C12.1801 3.68002 12.4001 3.46002 12.6801 3.46002C14.8901 3.46002 16.6801 5.25002 16.6801 7.46002C16.6801 7.74002 16.4601 7.96002 16.1801 7.96002ZM4.83996 6.79999L13.34 15.3C12.39 15.88 11.29 16.18 10.15 16.18C8.49996 16.18 6.93996 15.54 5.76996 14.37C4.59996 13.2 3.94996 11.65 3.94996 9.98999C3.94996 8.84999 4.25996 7.74999 4.83996 6.79999ZM4.70996 4.54999C1.70996 7.54999 1.70996 12.43 4.70996 15.43C6.20996 16.93 8.17996 17.68 10.15 17.68C12.12 17.68 14.09 16.93 15.59 15.43L4.70996 4.54999ZM4 16.14C3.7 15.84 3.43 15.52 3.18 15.18L2.89 15.69L1 18.97H4.79H8.59L8.31 18.49C6.69 18.14 5.2 17.34 4 16.14ZM13.85 8.04999C13.85 9.01999 13.07 9.79999 12.1 9.79999C11.13 9.79999 10.35 9.01999 10.35 8.04999C10.35 7.07999 11.13 6.29999 12.1 6.29999C13.07 6.29999 13.85 7.07999 13.85 8.04999Z"
                fill-rule="evenodd"
              />
            </svg>
            Monitor
          </button>
        </li>
        <li
          class="mr-2 menu navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open create actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-6"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              />
            </svg>
            Create …
          </button>
        </li>
        <li
          class="mr-2 navItem"
        >
          <button
            class="btn btnOutlineSecondary btnSm test-save-search-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17,18L12,15.82L7,18V5H17M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
              />
            </svg>
            Save search
          </button>
        </li>
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="navItem"
        >
          <button
            aria-label="Hide more matches on all results"
            aria-live="polite"
            class="btn btnOutlineSecondary btnSm text-decoration-none"
            data-placement="bottom"
            data-testid="search-result-expand-btn"
            data-tooltip="Hide more matches on all results"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-0"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M4.08,11.92L12,4L19.92,11.92L18.5,13.33L13,7.83V22H11V7.83L5.5,13.33L4.08,11.92M12,4H22V2H2V4H12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar code monitoring feature flag enabled, cannot create monitor from query 1`] = `
<DocumentFragment>
  <div
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
  >
    <div
      class="row"
    >
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex d-lg-none"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline mr-1"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
          />
        </svg>
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
          />
        </svg>
      </button>
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 button navItem"
          data-placement="bottom"
          data-tooltip="Code monitors only support type:diff or type:commit searches."
        >
          <a
            class="anchorLink btn btnOutlineSecondary btnSm text-decoration-none a11y-ignore create-code-monitor-button disabled"
            disabled=""
            href=""
            role="button"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="iconInline mr-1"
              fill="currentColor"
              height="20"
              role="img"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M18.01 8.01C18.01 8.29 18.23 8.51 18.51 8.51C18.79 8.51 19.01 8.29 19.01 8.01C19.01 4.15 15.87 1 12 1C11.72 1 11.5 1.22 11.5 1.5C11.5 1.78 11.72 2 12 2C15.31 2 18.01 4.7 18.01 8.01ZM16.1801 7.96002C15.9001 7.96002 15.6801 7.74002 15.6801 7.46002C15.6801 5.81002 14.3301 4.46002 12.6801 4.46002C12.4001 4.46002 12.1801 4.24002 12.1801 3.96002C12.1801 3.68002 12.4001 3.46002 12.6801 3.46002C14.8901 3.46002 16.6801 5.25002 16.6801 7.46002C16.6801 7.74002 16.4601 7.96002 16.1801 7.96002ZM4.83996 6.79999L13.34 15.3C12.39 15.88 11.29 16.18 10.15 16.18C8.49996 16.18 6.93996 15.54 5.76996 14.37C4.59996 13.2 3.94996 11.65 3.94996 9.98999C3.94996 8.84999 4.25996 7.74999 4.83996 6.79999ZM4.70996 4.54999C1.70996 7.54999 1.70996 12.43 4.70996 15.43C6.20996 16.93 8.17996 17.68 10.15 17.68C12.12 17.68 14.09 16.93 15.59 15.43L4.70996 4.54999ZM4 16.14C3.7 15.84 3.43 15.52 3.18 15.18L2.89 15.69L1 18.97H4.79H8.59L8.31 18.49C6.69 18.14 5.2 17.34 4 16.14ZM13.85 8.04999C13.85 9.01999 13.07 9.79999 12.1 9.79999C11.13 9.79999 10.35 9.01999 10.35 8.04999C10.35 7.07999 11.13 6.29999 12.1 6.29999C13.07 6.29999 13.85 7.07999 13.85 8.04999Z"
                fill-rule="evenodd"
              />
            </svg>
            Monitor
          </a>
        </li>
        <li
          class="mr-2 menu navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open create actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              />
            </svg>
            Create …
          </button>
        </li>
        <li
          class="mr-2 navItem"
        >
          <a
            class="anchorLink btn btnOutlineSecondary btnSm text-decoration-none test-save-search-link"
            href=""
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17,18L12,15.82L7,18V5H17M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
              />
            </svg>
            Save search
          </a>
        </li>
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="navItem"
        >
          <button
            aria-label="Hide more matches on all results"
            aria-live="polite"
            class="btn btnOutlineSecondary btnSm text-decoration-none"
            data-placement="bottom"
            data-testid="search-result-expand-btn"
            data-tooltip="Hide more matches on all results"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-0"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M4.08,11.92L12,4L19.92,11.92L18.5,13.33L13,7.83V22H11V7.83L5.5,13.33L4.08,11.92M12,4H22V2H2V4H12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar unauthenticated user 1`] = `
<DocumentFragment>
  <div
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
  >
    <div
      class="row"
    >
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex d-lg-none"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline mr-1"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
          />
        </svg>
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
          />
        </svg>
      </button>
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 button navItem"
          data-placement="bottom"
        >
          <button
            class="btn btnOutlineSecondary btnSm a11y-ignore create-code-monitor-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="iconInline mr-1"
              fill="currentColor"
              height="20"
              role="img"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M18.01 8.01C18.01 8.29 18.23 8.51 18.51 8.51C18.79 8.51 19.01 8.29 19.01 8.01C19.01 4.15 15.87 1 12 1C11.72 1 11.5 1.22 11.5 1.5C11.5 1.78 11.72 2 12 2C15.31 2 18.01 4.7 18.01 8.01ZM16.1801 7.96002C15.9001 7.96002 15.6801 7.74002 15.6801 7.46002C15.6801 5.81002 14.3301 4.46002 12.6801 4.46002C12.4001 4.46002 12.1801 4.24002 12.1801 3.96002C12.1801 3.68002 12.4001 3.46002 12.6801 3.46002C14.8901 3.46002 16.6801 5.25002 16.6801 7.46002C16.6801 7.74002 16.4601 7.96002 16.1801 7.96002ZM4.83996 6.79999L13.34 15.3C12.39 15.88 11.29 16.18 10.15 16.18C8.49996 16.18 6.93996 15.54 5.76996 14.37C4.59996 13.2 3.94996 11.65 3.94996 9.98999C3.94996 8.84999 4.25996 7.74999 4.83996 6.79999ZM4.70996 4.54999C1.70996 7.54999 1.70996 12.43 4.70996 15.43C6.20996 16.93 8.17996 17.68 10.15 17.68C12.12 17.68 14.09 16.93 15.59 15.43L4.70996 4.54999ZM4 16.14C3.7 15.84 3.43 15.52 3.18 15.18L2.89 15.69L1 18.97H4.79H8.59L8.31 18.49C6.69 18.14 5.2 17.34 4 16.14ZM13.85 8.04999C13.85 9.01999 13.07 9.79999 12.1 9.79999C11.13 9.79999 10.35 9.01999 10.35 8.04999C10.35 7.07999 11.13 6.29999 12.1 6.29999C13.07 6.29999 13.85 7.07999 13.85 8.04999Z"
                fill-rule="evenodd"
              />
            </svg>
            Monitor
          </button>
        </li>
        <li
          class="mr-2 menu navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open create actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-8"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              />
            </svg>
            Create …
          </button>
        </li>
        <li
          class="mr-2 navItem"
        >
          <button
            class="btn btnOutlineSecondary btnSm test-save-search-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-1"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17,18L12,15.82L7,18V5H17M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
              />
            </svg>
            Save search
          </button>
        </li>
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="navItem"
        >
          <button
            aria-label="Hide more matches on all results"
            aria-live="polite"
            class="btn btnOutlineSecondary btnSm text-decoration-none"
            data-placement="bottom"
            data-testid="search-result-expand-btn"
            data-tooltip="Hide more matches on all results"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline mr-0"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M4.08,11.92L12,4L19.92,11.92L18.5,13.33L13,7.83V22H11V7.83L5.5,13.33L4.08,11.92M12,4H22V2H2V4H12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
